--- a/app/templates/components/fs3-ability-table.hbs
+++ b/app/templates/components/fs3-ability-table.hbs
@@ -3,11 +3,7 @@
   <table class="char-ability-list">
   {{#each list as |ability| }}
   <tr>
-    <td>{{ability.name}} 
-      {{#if ability.linked_attr}}
-      <span class="fs3-linked-attr">({{ability.linked_attr}})</span>
-      {{/if}}
-    </td>
+    <td>{{ability.name}}</td>
     <td>{{fs3-dots rating=ability.rating max=max}}
     
     {{#if showSpecs}}
