--- a/app/templates/plots.hbs
+++ b/app/templates/plots.hbs
@@ -20,10 +20,10 @@
 
 <thead>
     <tr>
-        <th class="col-md-3">Plot</th>
-        <th class="col-md-2">Storyteller</th>
-        <th class="col-md-2">Dates</th>
-        <th class="col-md-5">Summary</th>
+        <th>Plot</th>
+        <th>Storyteller</th>
+        <th>Dates</th>
+        <th>Summary</th>
     </tr>
 </thead>
 
